# crossfit_twin

./: .gitignore  CLAUDE.md  README.md  README_V2.md  V2_MIGRATION_GUIDE.md  example_v2_usage.py  example_v2_usage_py34.py  packages.txt  parameters_doc.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  streamlit_app.py  streamlit_app_v2.py  syntax_check.py  twin project.txt  validate_new_system.py
crossfit_twin/: __init__.py  athlete.py  athlete_v2.py  benchmarks.py  builder.py  capabilities.py  clone_optimization.py  fallback_system.py  fatigue_models.py  operational_whatif.py  rpe_strategy.py  sensitivity_analysis.py  simulator.py  strategy.py  strategy_solver.py  utils.py  workout.py
examples/: example_usage.py  validation_scenarios.py
tests/: __init__.py  test_athlete.py  test_simulator.py  test_strategy.py  test_workout.py
